--- a/config/templates/postcard/list.html
+++ b/config/templates/postcard/list.html
@@ -46,11 +46,11 @@ img{
   border: burlywood solid 1px;
 }
   </style>
-  {% for photo in photos %}
+  {% for p in post %}
   <div class="col-lg-3 col-md-4 col-xs-6">
-    <a href="{% url 'post:detail' post.slug %}" class="d-block mb-4 h-100">
+    <a href="{% url 'post:detail' post.id %}" class="d-block mb-4 h-100">
       <span class="hovertext" data-hover="{{post.title}}">
-        <img src="{{post.image.url}}" class="img-fluid rounded" alt="{{post.title}}"  /> 
+        <img src="{{posts.image.url}}" class="img-fluid rounded" alt="{{posts.title}}"  /> 
       </span>
       
     </a>
