work on frontend

--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -1,11 +1,13 @@
 <!-- templates/base.html -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Postcard</title>
+    <title>PostCard | Beautiful Location Stock</title>
+    <link rel="stylesheet" href="{% static 'postcard/base.css' %}">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,14 +27,8 @@
     />
   </head>
   <body>
-    <style>
-      body{
-        background-color:burlywood;
-      }
-    </style>
-    {% include 'navbar.html' %}
 
-    <div class="container mt-4">
+    {% include 'navbar.html' %}
     {% block body %} 
 
     {% endblock body %}
