--- a/config/templates/navbar.html
+++ b/config/templates/navbar.html
@@ -1,23 +1,26 @@
 <!-- templates/navbar.html -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'post:list' %}">Photo App</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"/>
-    </button>
-    <div class="collapse navbar-collapse flex-row-reverse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav">          {% if user.is_authenticated %}            
-    <li class="nav-item">
-    <a class="nav-link active" href="{% url 'post:create' %}">Add a photo</a>
-    </li>
-    <li class="nav-item">
-    <a class="nav-link active" href="#">Hi {{user.username}}</a>
-    </li>
-              {% else %}            
-    <li class="nav-item">
-    <a href="{% url 'users:login' %}" class="btn btn-sm btn-danger">Sign In</a>
-    </li>
-              {% endif %}        </ul>
-    </div>
+{% load static %}
+    <header>
+        <div id="logo">    
+        <a href=><H1>PostCard</H1></a>
+        </div>
+        <div id="header-links-cont">
+            <ul id="header-links">
+                <li><img src="{% static 'postcard/assets/icons/bx-search-alt-2.svg' %}" alt="Search icon"></li>
+                <li><a href="">Explore</a></li>
+                <li><a href="">Studio</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="{% url 'post:create' %}">Submit</a></li>
+                <li><img src="{% static 'postcard/assets/icons/bxs-user.svg' %}" alt="User icon"></li>
+                <li><button> <a href="{% url 'user:login' %}">Join</a> </button></li>
+            </ul>
+        </div>
+    </header>
+
+    <section id="landing-photo">
+        <img src="{% static 'postcard/assets/icons/pdesign.jpg' %}" alt="" id="l-p-im">
+        <h1> Beautiful photos of lovely Locations..</h1>
+        <p>Trending: <span style="opacity: .5;">bahamas palms valgos, lapos.</span></p>
+    </section>
     </div>
     </nav>
