--- a/config/templates/postcard/create.html
+++ b/config/templates/postcard/create.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 
 {% block body %}
 <div class="mx-auto">
@@ -8,7 +8,7 @@
 <div class="form-group">
   <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-
+    {{ form|crispy }}
     <button type="submit" class="btn btn-success mb-3">Add Photo</button>
   </form>
 </div>
