--- a/config/templates/postcard/update.html
+++ b/config/templates/postcard/update.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
-
+{% load crispy_forms_tags %}
 
 {% block body %}
 <div class="mx-auto">
-  <h1 class="mt-3 text-center">Edit photo {{photo}}</h1>
+  <h1 class="mt-3 text-center">Edit photo {{post}}</h1>
 </div>
 <div class="form-group">
   <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
+    {{ form|crispy }}
     <button type="submit" class="btn btn-success mb-3">Edit Photo</button>
   </form>
 </div>
